crates/query/src/snapshots/kcl_query__tests__list_variables-10.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "dict1.b": [
    {
      "name": "b",
      "type_name": "",
      "op_sym": ":",
      "value": "2",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
