crates/query/src/snapshots/kcl_query__tests__list_variables-15.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "dict2.b.d": [
    {
      "name": "d",
      "type_name": "",
      "op_sym": ":",
      "value": "3",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
