crates/query/src/snapshots/kcl_query__tests__list_variables-17.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "sha.name": [
    {
      "name": "name",
      "type_name": "",
      "op_sym": ":",
      "value": "\"Hello\"",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
